--- a/substrates/tomcat6/pom.xml
+++ b/substrates/tomcat6/pom.xml
@@ -28,6 +28,10 @@
             <groupId>org.rioproject</groupId>
             <artifactId>rio</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>boot</artifactId>
+        </dependency>
 
         <!-- Elastic Grid Manager -->
         <dependency>
