--- a/substrates/pom.xml
+++ b/substrates/pom.xml
@@ -16,8 +16,8 @@
         <module>substrate-api</module>
         <module>tomcat6</module>
         <module>jboss5</module>
-        <module>glassfish3</module>
-	<!--<module>apache</module>-->
+        <!--<module>glassfish3</module>-->
+	    <!--<module>apache</module>-->
         <!--<module>mysql</module>-->
     </modules>
 
@@ -98,6 +98,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.4.1</version>
+                <configuration>
+                    <forkMode>once</forkMode>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
