--- a/modules/elastic-grid-manager/pom.xml
+++ b/modules/elastic-grid-manager/pom.xml
@@ -60,6 +60,8 @@
                     <target>1.5</target>
                     <optimize>true</optimize>
                     <encoding>UTF-8</encoding>
+                    <meminitial>128m</meminitial>
+                    <maxmem>1024m</maxmem>
                 </configuration>
             </plugin>
             <plugin>
