--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -37,6 +37,8 @@
         <module>amazon-ec2-provisioner</module>
         <module>private-lan-provisioner</module>
         <module>rackspace-cloudfiles-storage</module>
+		<module>rackspace-cloudservers</module>
+		<module>rackspace-cloudservers-provisioner</module>
         <!--module>examples</module-->
         <module>jabber-cli</module>
 	    <module>elastic-grid-deploy-handlers</module>
