--- a/platforms/pom.xml
+++ b/platforms/pom.xml
@@ -18,7 +18,7 @@
     <modules>
 		<module>private-lan</module>
         <module>amazon</module>
-        <!--module>rackspace</module-->
+        <module>rackspace</module>
     </modules>
 
     <build>
