--- a/modules/rackspace-cloudservers/pom.xml
+++ b/modules/rackspace-cloudservers/pom.xml
@@ -13,45 +13,18 @@
     <description>Java API for the Rackspace Cloud Servers API using the REST API with XML documents.</description>
 
     <dependencies>
-
-        <!-- Elastic Grid Manager -->
+        
+        <!-- Object/XML mapping dependencies -->
         <dependency>
-            <groupId>${pom.groupId}</groupId>
-            <artifactId>elastic-grid-manager</artifactId>
-            <version>${pom.version}</version>
+            <groupId>org.jibx</groupId>
+            <artifactId>jibx-run</artifactId>
         </dependency>
 
-        <!-- Cloud Files dependency -->
+        <!-- HttpClient dependency -->
         <dependency>
-            <groupId>com.mosso</groupId>
-            <artifactId>cloud-files</artifactId>
-            <version>1.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.13</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.rioproject</groupId>
-            <artifactId>rio</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.activation</groupId>
-            <artifactId>activation</artifactId>
-            <version>1.1</version>
-        </dependency>
-
-        <!-- Tests dependencies -->
-        <dependency>
-            <groupId>${pom.groupId}</groupId>
-            <artifactId>elastic-grid-manager</artifactId>
-            <version>${pom.version}</version>
-            <classifier>tests</classifier>
-            <scope>test</scope>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.0-beta2</version>
         </dependency>
 
     </dependencies>
@@ -67,6 +40,27 @@
                     <optimize>true</optimize>
                     <encoding>UTF-8</encoding>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jibx</groupId>
+                <artifactId>maven-jibx-plugin</artifactId>
+                <version>1.2.1</version>
+                <configuration>
+                    <directory>src/main/conf</directory>
+                    <includes>
+                        <include>cloudservers.xsd</include>
+                    </includes>
+                    <options>
+                        <package>com.rackspace.cloudservers.jibx</package>
+                    </options>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>schema-codegen</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
