--- a/modules/rackspace-cloudservers/pom.xml
+++ b/modules/rackspace-cloudservers/pom.xml
@@ -66,7 +66,7 @@
                             <goal>schema-codegen</goal>
                         </goals>
                         <configuration>
-                            <directory>src/main/conf</directory>
+                            <directory>${basedir}/src/main/conf</directory>
                             <includes>
                                 <include>cloudservers.xsd</include>
                             </includes>
@@ -81,7 +81,7 @@
                             <goal>bind</goal>
                         </goals>
                         <configuration>
-                            <directory>target/generated-sources</directory>
+                            <directory>${basedir}/target/generated-sources</directory>
                             <load>true</load>
                             <validate>true</validate>
                             <!--<verbose>true</verbose>-->
