--- a/modules/rackspace-cloudservers/pom.xml
+++ b/modules/rackspace-cloudservers/pom.xml
@@ -95,7 +95,7 @@
                             <goal>bind</goal>
                         </goals>
                         <configuration>
-                            <directory>${basedir}/target/generated-sources</directory>
+                            <directory>target/generated-sources</directory>
                             <load>true</load>
                             <validate>true</validate>
                             <!--<verbose>true</verbose>-->
