--- a/modules/rackspace-cloudservers/pom.xml
+++ b/modules/rackspace-cloudservers/pom.xml
@@ -40,6 +40,12 @@
             <version>${pom.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.woodstox</groupId>
+            <artifactId>wstx-asl</artifactId>
+            <version>3.2.1</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
