--- a/modules/rackspace-cloudservers-provisioner/pom.xml
+++ b/modules/rackspace-cloudservers-provisioner/pom.xml
@@ -15,9 +15,9 @@
 	
 		<!-- Rackspace Cloud Servers -->
 		<dependency>
-			<groupId>${pom.groupId}</groupId>
+			<groupId>net.elasticgrid.rackspace</groupId>
 			<artifactId>rackspace-cloudservers</artifactId>
-			<version>${pom.version}</version>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
         <!-- Elastic Grid Manager -->
