Fixed s3:// protocol handler classpath issues.

--- a/platforms/private-lan/config/eg.properties.template
+++ b/platforms/private-lan/config/eg.properties.template
@@ -2,7 +2,7 @@ eg.s3.dropBucket=${eg.s3.dropBucket}
 eg.s3.overridesBucket=${eg.s3.overridesBucket}
 aws.accessId=${aws.accessId}
 aws.secretKey=${aws.secretKey}
-aws.ec2.key=${aws.ec2.key}
+aws.ec2.keypair=${aws.ec2.keypair}
 aws.ec2.ami32=${aws.ec2.ami32}
 aws.ec2.ami64=${aws.ec2.ami64}
 aws.ec2.secured=true
