--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.elasticgrid</groupId>
         <artifactId>elastic-grid</artifactId>
-        <version>0.9.2</version>
+        <version>0.9.2.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.elasticgrid</groupId>
@@ -113,6 +113,12 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
