--- a/platforms/private-lan/pom.xml
+++ b/platforms/private-lan/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 	   	<groupId>com.elasticgrid</groupId>
 	    <artifactId>elastic-grid-platforms</artifactId>
-	    <version>0.9.2</version>
+	    <version>0.9.2.1</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>private-lan</artifactId>
@@ -285,7 +285,7 @@
                         </goals>
                         <configuration>
                             <tasks>
-                                <copy file="${project.build.directory}/private-lan-0.9.2.jar"
+                                <copy file="${project.build.directory}/private-lan-${pom.version}.jar"
                                       tofile="${staging.dir}/bin/panels/com.elasticgrid.tools.installer.AWSCredentialsPanel.jar"/>
                             </tasks>
                         </configuration>
