Fixed classloaders issues with Amazon S3 Storage Engine. Register JetS3t MBeans automatically.

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -42,6 +42,7 @@
         <!--module>examples</module-->
         <module>jabber-cli</module>
 	    <module>elastic-grid-deploy-handlers</module>
+	    <module>elastic-grid-protocol-handlers</module>
         <module>private-lan-cloud-platform</module>
         <module>amazon-ec2-cloud-platform</module>
     </modules>
