--- a/modules/elastic-grid-protocol-handlers/pom.xml
+++ b/modules/elastic-grid-protocol-handlers/pom.xml
@@ -13,12 +13,12 @@
 
     <dependencies>
 
-        <!-- Elastic Grid Utils -->
-        <!--<dependency>-->
-            <!--<groupId>${pom.groupId}</groupId>-->
-            <!--<artifactId>elastic-grid-utils</artifactId>-->
-            <!--<version>${pom.version}</version>-->
-        <!--</dependency>-->
+        <!-- Elastic Grid Manager -->
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>elastic-grid-manager</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
 
         <!-- Elastic Grid Core -->
         <dependency>
