--- a/examples/calculator/calculator2/pom.xml
+++ b/examples/calculator/calculator2/pom.xml
@@ -64,52 +64,39 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-rio-plugin</artifactId>
-                <version>4.0-M3-SNAPSHOT</version>
+                <version>4.0-M3</version>
                 <extensions>true</extensions>
                 <configuration>
-                    <environment>
-                        <rio.home>${env.RIO_HOME}</rio.home>
-                        <jini.home>${env.JINI_HOME}</jini.home>
-                    </environment>
-                    <oarName>calculator2</oarName>
                     <opstring>src/main/conf/calculator.groovy</opstring>
-                    <!--<opstring-test>${basedir}/src/test/conf/calculator.groovy</opstring-test>-->
-
-                    <implementationIns>
-                        <implementationIn>calculator</implementationIn>
-                    </implementationIns>
-                    <implementationTopclasses>
-                        <implementationTopclass>calculator.service.CalculatorImpl</implementationTopclass>
-                        <implementationTopclass>calculator.service.AddImpl</implementationTopclass>
-                        <implementationTopclass>calculator.service.SubtractImpl</implementationTopclass>
-                        <implementationTopclass>calculator.service.DivideImpl</implementationTopclass>
-                        <implementationTopclass>calculator.service.MultiplyImpl</implementationTopclass>
-                        <implementationTopclass>calculator.service.ModuloImpl</implementationTopclass>
-                    </implementationTopclasses>
-
-                    <clientIns>
-                        <clientIn>calculator</clientIn>
-                    </clientIns>
-                    <clientTopclasses>
-                        <clientTopclass>calculator.Calculator</clientTopclass>
-                        <clientTopclass>calculator.Add</clientTopclass>
-                        <clientTopclass>calculator.Subtract</clientTopclass>
-                        <clientTopclass>calculator.Divide</clientTopclass>
-                        <clientTopclass>calculator.Multiply</clientTopclass>
-                        <clientTopclass>calculator.Modulo</clientTopclass>
-                    </clientTopclasses>
-
-                    <downloadableIns>
-                        <downloadableIn>calculator</downloadableIn>
-                    </downloadableIns>
-                    <downloadableTopclasses>
-                        <downloadableTopclass>calculator.Calculator</downloadableTopclass>
-                        <downloadableTopclass>calculator.Add</downloadableTopclass>
-                        <downloadableTopclass>calculator.Subtract</downloadableTopclass>
-                        <downloadableTopclass>calculator.Divide</downloadableTopclass>
-                        <downloadableTopclass>calculator.Multiply</downloadableTopclass>
-                        <downloadableTopclass>calculator.Modulo</downloadableTopclass>
-                    </downloadableTopclasses>
+                    <createJars>
+                        <createJar>
+                            <ins>
+                                <in>calculator</in>
+                            </ins>
+                            <topclasses>
+                                <topclass>calculator.service.CalculatorImpl</topclass>
+                                <topclass>calculator.service.AddImpl</topclass>
+                                <topclass>calculator.service.SubtractImpl</topclass>
+                                <topclass>calculator.service.DivideImpl</topclass>
+                                <topclass>calculator.service.MultiplyImpl</topclass>
+                                <topclass>calculator.service.ModuloImpl</topclass>
+                            </topclasses>
+                        </createJar>
+                        <createJar>
+                            <classifier>dl</classifier>
+                            <ins>
+                                <in>calculator</in>
+                            </ins>
+                            <topclasses>
+                                <topclass>calculator.Calculator</topclass>
+                                <topclass>calculator.Add</topclass>
+                                <topclass>calculator.Subtract</topclass>
+                                <topclass>calculator.Divide</topclass>
+                                <topclass>calculator.Multiply</topclass>
+                                <topclass>calculator.Modulo</topclass>
+                            </topclasses>
+                        </createJar>
+                    </createJars>
                 </configuration>
             </plugin>
             <plugin>
