--- a/examples/video-conversion/converter/pom.xml
+++ b/examples/video-conversion/converter/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>video-conversion-converter</artifactId>
-    <packaging>jsb</packaging>
+    <packaging>classdepandjar</packaging>
     <name>Examples :: Video Conversion :: Converter</name>
 
     <dependencies>
@@ -76,36 +76,30 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-rio-plugin</artifactId>
-                <version>4.0-M3-SNAPSHOT</version>
+                <version>4.0-M3</version>
                 <extensions>true</extensions>
                 <configuration>
-                    <environment>
-                        <rio.home>${env.RIO_HOME}</rio.home>
-                        <jini.home>${env.JINI_HOME}</jini.home>
-                    </environment>
-
-                    <implementationIns>
-                        <implementationIn>com.elasticgrid.examples.video</implementationIn>
-                    </implementationIns>
-                    <implementationTopclasses>
-                        <implementationTopclass>com.elasticgrid.examples.video.VideoConverterJSB</implementationTopclass>
-                        <implementationTopclass>com.elasticgrid.examples.video.MencoderEncoder</implementationTopclass>
-                    </implementationTopclasses>
-
-                    <clientIns>
-                        <clientIn>com.elasticgrid.examples.video</clientIn>
-                    </clientIns>
-                    <clientTopclasses>
-                        <clientTopclass>com.elasticgrid.examples.video.VideoConverter</clientTopclass>
-                    </clientTopclasses>
-
-                    <downloadableIns>
-                        <downloadableIn>com.elasticgrid.examples.video</downloadableIn>
-                    </downloadableIns>
-                    <downloadableTopclasses>
-                        <downloadableTopclass>com.elasticgrid.examples.video.S3VideoConverterProxy</downloadableTopclass>
-                        <downloadableTopclass>com.elasticgrid.examples.video.LocalVideoConverterProxy</downloadableTopclass>
-                    </downloadableTopclasses>
+                    <createJars>
+                        <createJar>
+                            <ins>
+                                <in>com.elasticgrid.examples.video</in>
+                            </ins>
+                            <topclasses>
+                                <topclass>com.elasticgrid.examples.video.VideoConverterJSB</topclass>
+                                <topclass>com.elasticgrid.examples.video.MencoderEncoder</topclass>
+                            </topclasses>
+                        </createJar>
+                        <createJar>
+                            <classifier>dl</classifier>
+                            <ins>
+                                <in>com.elasticgrid.examples.video</in>
+                            </ins>
+                            <topclasses>
+                                <topclass>com.elasticgrid.examples.video.S3VideoConverterProxy</topclass>
+                                <topclass>com.elasticgrid.examples.video.LocalVideoConverterProxy</topclass>
+                            </topclasses>
+                        </createJar>
+                    </createJars>
                 </configuration>
             </plugin>
             <plugin>
