--- a/modules/amazon-ec2-cloud-platform/pom.xml
+++ b/modules/amazon-ec2-cloud-platform/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>amazon-ec2-cloud-platform</artifactId>
-    <packaging>jsb</packaging>
+    <packaging>classdepandjar</packaging>
     <name>Modules :: Amazon EC2 Cloud Platform (JSB)</name>
 
     <dependencies>
@@ -105,27 +105,30 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-rio-plugin</artifactId>
-                <version>4.0-M3-SNAPSHOT</version>
+                <version>4.0-M3</version>
                 <extensions>true</extensions>
                 <configuration>
-                    <environment>
-                        <rio.home>${env.RIO_HOME}</rio.home>
-                        <jini.home>${env.JINI_HOME}</jini.home>
-                    </environment>
-                    <implementationIns>
-                        <implementationIn>com.elasticgrid.platforms.ec2</implementationIn>
-                    </implementationIns>
-                    <implementationTopclasses>
-                        <implementationTopclass>com.elasticgrid.platforms.ec2.EC2CloudPatformManagerJSB</implementationTopclass>
-                        <implementationTopclass>com.elasticgrid.platforms.ec2.EC2CloudPlatformManagerProxy</implementationTopclass>
-                    </implementationTopclasses>
-                    <downloadableIns>
-                        <downloadableIn>com.elasticgrid.platforms.ec2</downloadableIn>
-                    </downloadableIns>
-                    <downloadableTopclasses>
-                        <downloadableTopclass>com.elasticgrid.platforms.ec2.EC2CloudPlatformManager</downloadableTopclass>
-                        <downloadableTopclass>com.elasticgrid.platforms.ec2.EC2CloudPlatformManagerProxy</downloadableTopclass>
-                    </downloadableTopclasses>
+                    <createJars>
+                        <createJar>
+                            <ins>
+                                <in>com.elasticgrid.platforms.ec2</in>
+                            </ins>
+                            <topclasses>
+                                <topclass>com.elasticgrid.platforms.ec2.EC2CloudPatformManagerJSB</topclass>
+                                <topclass>com.elasticgrid.platforms.ec2.EC2CloudPlatformManagerProxy</topclass>
+                            </topclasses>
+                        </createJar>
+                        <createJar>
+                            <classifier>dl</classifier>
+                            <ins>
+                                <in>com.elasticgrid.platforms.ec2</in>
+                            </ins>
+                            <topclasses>
+                                <topclass>com.elasticgrid.platforms.ec2.EC2CloudPlatformManager</topclass>
+                                <topclass>com.elasticgrid.platforms.ec2.EC2CloudPlatformManagerProxy</topclass>
+                            </topclasses>
+                        </createJar>
+                    </createJars>
                 </configuration>
             </plugin>
         </plugins>
