--- a/pom.xml
+++ b/pom.xml
@@ -134,25 +134,25 @@
             <dependency>
                 <groupId>org.rioproject</groupId>
                 <artifactId>rio</artifactId>
-                <version>4.0-M3-SNAPSHOT</version>
+                <version>${rio.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.rioproject</groupId>
                 <artifactId>boot</artifactId>
-                <version>4.0-M3-SNAPSHOT</version>
+                <version>${rio.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.rioproject</groupId>
                 <artifactId>monitor</artifactId>
-                <version>4.0-M3-SNAPSHOT</version>
+                <version>${rio.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.rioproject.tools</groupId>
                 <artifactId>cli</artifactId>
-                <version>4.0-M3-SNAPSHOT</version>
+                <version>${rio.version}</version>
                 <scope>provided</scope>
             </dependency>
             <!-- Jini 2.1 dependencies -->
@@ -373,5 +373,9 @@
             <url>http://jibx.sourceforge.net/maven2</url>
         </pluginRepository>
     </pluginRepositories>
+
+    <properties>
+        <rio.version>4.0-M3</rio.version>
+    </properties>
 
 </project>
