Fixes in the assembly.

--- a/platforms/private-lan/pom.xml
+++ b/platforms/private-lan/pom.xml
@@ -271,6 +271,8 @@
                                 <get dest="${staging.dir}/ec2-api-tools.zip" verbose="yes" usetimestamp="yes"
                                      src="http://www.amazon.com/gp/redirect.html/ref=aws_rc_ec2tools?location=http://s3.amazonaws.com/ec2-downloads/ec2-api-tools.zip&amp;token=A80325AA4DAB186C80828ED5138633E3F49160D9"/>
                                 <unzip src="${staging.dir}/ec2-api-tools.zip" dest="${staging.dir}"/>
+                                <!-- Display Rio version going to be used -->
+                                <echo>Bundling Rio ${rio.version} from ${rio.home}/distribution/target/rio-${rio.version}...</echo>
                             </tasks>
                         </configuration>
                     </execution>
@@ -332,11 +334,11 @@
         <!--</pluginRepository>-->
     <!--</pluginRepositories>-->
 
-        <properties>
-            <staging.dir>${project.build.directory}/staging</staging.dir>
-            <izpack-release>4.3.0-SNAPSHOT</izpack-release>
-            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        </properties>
+    <properties>
+        <staging.dir>${project.build.directory}/staging</staging.dir>
+        <izpack-release>4.3.0-SNAPSHOT</izpack-release>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
 
 </project>
