--- a/examples/video-conversion/client/pom.xml
+++ b/examples/video-conversion/client/pom.xml
@@ -20,8 +20,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.rioproject.tools</groupId>
-            <artifactId>cli</artifactId>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio-cli</artifactId>
         </dependency>
 
         <dependency>
