--- a/modules/elastic-grid-cli/pom.xml
+++ b/modules/elastic-grid-cli/pom.xml
@@ -74,8 +74,8 @@
 
         <!-- Rio dependencies -->
         <dependency>
-            <groupId>org.rioproject.tools</groupId>
-            <artifactId>cli</artifactId>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio-cli</artifactId>
         </dependency>
         <dependency>
             <groupId>org.rioproject</groupId>
