--- a/examples/calculator/calculator2/pom.xml
+++ b/examples/calculator/calculator2/pom.xml
@@ -34,8 +34,14 @@
         </dependency>
 
         <dependency>
-            <groupId>org.rioproject.tools</groupId>
-            <artifactId>cli</artifactId>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio-cli</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio-test</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
